gccida/c1/expand_start_case
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_start_case/src/stmt.c:4921:12: error: expected expression
*( _OWORD *)( object_base + 40) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_start_case/src/stmt.c:4921:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 40) = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_start_case/src/obj/stmt.o] Error 1
